Fixed java version compatibility issues (v8-v21).