@@ -4,6 +4,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Collections;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.Map;
@@ -13,6 +14,6 @@ import java.util.Map;
 public class MyController {
     @RequestMapping(value = "/getdate", method = RequestMethod.POST)
     public Map<String, ?> home() {
-        return Map.of("date", new SimpleDateFormat("EEE, d MMM yyyy").format(new Date()));
+        return Collections.singletonMap("date", new SimpleDateFormat("EEE, d MMM yyyy").format(new Date()));
     }
 }
